Login dropdown no longer running off screen. CSS fixes

--- a/GoatEvents/src/main/webapp/resources/searchstyles.css
+++ b/GoatEvents/src/main/webapp/resources/searchstyles.css
@@ -299,6 +299,8 @@ a {
 	min-width: 160px;
 	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 	z-index: 1;
+		 right: 0;
+  left: auto;
 }
 
 .dropdown-content a {
@@ -306,6 +308,7 @@ a {
 	padding: 12px 16px;
 	text-decoration: none;
 	display: block;
+
 }
 
 .dropdown-content a:hover {
@@ -314,7 +317,7 @@ a {
 
 .dropcheck {
 	position: absolute;
-	left: 9999px;
+	visibility: hidden;
 }
 
 .dropcheck:checked ~ .dropdown-content {
