--- a/GoatEvents/src/main/webapp/resources/styles.css
+++ b/GoatEvents/src/main/webapp/resources/styles.css
@@ -298,6 +298,8 @@ a {
 	min-width: 160px;
 	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 	z-index: 1;
+		 right: 0;
+  left: auto;
 }
 
 .dropdown-content a {
@@ -313,7 +315,8 @@ a {
 
 .dropcheck {
 	position: absolute;
-	left: 9999px;
+		visibility: hidden;
+	
 }
 
 .dropcheck:checked ~ .dropdown-content {
